           mountlist is focused after refresh
  CHANGED: dont't execute a process if the correct working dir cannot be set
  CHANGED: dont't retrieve working dir of the cmdline from the label which might get truncated
           - store it in a string instead
  CHANGED: the packer/unpacker/archive tester are job based now
  CHANGED: the old views were replaced by the interviews

    FIXED: mountman: unmounting is not possible if currently opened dir is below the mountpoint
    FIXED: [ 2860400 ] Drag'n'drop to kmail broken
    FIXED: [ 2904850 ] panels are not repainted
    FIXED: deadlock when trying to display error message after failed mount
    FIXED: [ 2858133 ] wrong background color in listviews
    FIXED: [ 2857663 ] deadlock when trying to display error message after failed unmount
    FIXED: problem with autorefresh in the new interviews
    FIXED: [ 2609505 ] problem with directory refresh
    FIXED: [ 2793916 ] KHistoryComboBox content can change the window width
    FIXED: [ 2805624 ] ctrl-left/right arrow with locked tabs on the other panel
    FIXED: panels sometimes lose focus
    FIXED: directory compare modes don't work
    FIXED: [ 2609483 ] unpacking to directories with international characters


2.0.0 "Mars Pathfinder"
=======================

    ADDED: [ 2466695 ] Archive dialog now remembers Compression level

    FIXED: [ 2671702 ] wrong file size for files with currupt encoding 
    FIXED: sync-browse fails if the name contains spaces
    FIXED: Compile error with Qt-4.5 (patch by Marc Schiffbauer)
    FIXED: tab change at dragging doesn't work
    FIXED: [ 2543170 ] Crashes on mouse wheel in brief view
    FIXED: [ 2553396 ] Krusader exits after closing KrViewer
    FIXED: [ 2563664 ] Krusader always trashes (not deletes) files
    FIXED: tar.bz2 doesn't always detected automatically
    FIXED: panel freezes if the inactive path is invalid
    FIXED: problem when splitter sizes are 0, 0