@@ -26,6 +26,7 @@
   CHANGED: the packer/unpacker/archive tester are job based now
   CHANGED: the old views were replaced by the interviews
 
+    FIXED: if a panel is focused by clicking on the header, the colors/actions are not updated
     FIXED: mountman: unmounting is not possible if currently opened dir is below the mountpoint
     FIXED: [ 2860400 ] Drag'n'drop to kmail broken
     FIXED: [ 2904850 ] panels are not repainted
